k8s/overlays/staging/patches/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vrs-app
  namespace: vrs-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - vrs-staging.k8s.cmtmm.online
      secretName: vrs-staging-app-tls
  rules:
    - host: vrs-staging.k8s.cmtmm.online
